# bloqade-python

./: .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  CITATION.bib  CITATION.cff  CNAME  LICENSE  Project.toml  README.md  codecov.yml  example-3-fixed-1d-z2-job.json  future.json  inheritance_tree.py  main.py  main2.py  mkdocs.yml  pyproject.toml  quera_submit.json  test.md  traverse_tree.py  versions.json
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-issue.md  feature_request.md
.github/workflows/: ci.yml  cov.yml  deploy.yml  deploy_dev.yml  deploy_latest.yml  doc.yml  link-checker.yml  lint.yml  pdm.yml  pr.yml  publish.yml  test.yml
0.11.0/: 404.html  index.html  objects.inv  sitemap.xml
0.11.0/contributing/: index.html
0.11.0/search/: search_index.json
0.12.0/: 404.html  index.html  objects.inv  sitemap.xml
0.12.0/contributing/: index.html
0.13.0/: 404.html  index.html  sitemap.xml
0.13.0/contributing/: index.html
0.14.0/: 404.html  index.html  sitemap.xml
0.14.0/contributing/: index.html
0.14.0/reference/: SUMMARY.txt
0.15.0/: 404.html  index.html  sitemap.xml
0.15.0/contributing/: index.html
0.15.1/: 404.html  index.html  sitemap.xml
0.15.1/contributing/: index.html
0.15.10/: 404.html  index.html  sitemap.xml
0.15.10/contributing/: index.html
0.15.11/: index.html  sitemap.xml
0.15.12/: 404.html  index.html  sitemap.xml
0.15.12/contributing/: index.html
0.15.13/: 404.html  index.html  objects.inv  sitemap.xml
0.15.13/contributing/: index.html
0.15.13/search/: search_index.json
0.15.14/: 404.html  index.html  sitemap.xml
0.15.14/contributing/: index.html
0.15.2/: 404.html  index.html  sitemap.xml
0.15.2/contributing/: index.html
0.15.3/: 404.html  index.html  sitemap.xml
0.15.3/contributing/: index.html
0.15.4/: 404.html  index.html  sitemap.xml
0.15.4/contributing/: index.html
0.15.5/: 404.html  index.html  sitemap.xml
0.15.5/contributing/: index.html
0.15.6/: 404.html  index.html  sitemap.xml
0.15.6/contributing/: index.html
0.15.6/search/: search_index.json
0.15.7/: 404.html  index.html  sitemap.xml
0.15.7/contributing/: index.html
0.15.9/: 404.html  index.html  sitemap.xml
0.15.9/contributing/: index.html
0.7.1/: 404.html  index.html  sitemap.xml
0.7.1/contributing/: index.html
0.7.1/getting_started/: index.html
0.7.1/search/: search_index.json
0.7.1/tutorials/: index.html
0.7.2/: 404.html  index.html  sitemap.xml
0.7.2/contributing/: index.html
0.7.2/getting_started/: index.html
0.7.2/tutorials/: index.html
0.8.0/: 404.html  index.html  objects.inv  sitemap.xml
0.8.0/contributing/: index.html
0.8.0/search/: search_index.json
0.9.0/: 404.html  index.html  sitemap.xml
0.9.0/contributing/: index.html
0.9.0/search/: search_index.json
15.3/: 404.html  index.html  sitemap.xml
15.3/contributing/: index.html
15.7/: 404.html  index.html  sitemap.xml
15.7/contributing/: index.html
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/blog/: index.html
dev/contributing/: index.html
dev/getting_started/: index.html
dev/license/: index.html
dev/overrides/: main.html
dev/reference/: SUMMARY.txt
dev/scripts/: gen_ref_nav.py
dev/search/: search_index.json
dev/tutorials/: index.html
docs/: index.md  mkdocs.yml
docs/builder-workflow/: overview.md  standard.md
docs/contributing/: asking-a-question.md  code-of-conduct.md  feature-requests.md  index.md  providing-feedback.md  reporting-a-bug.md
docs/docs/: index.md  philosophy.md
docs/drafts/: aws_hybrid_execution.md
docs/getting_started/: philosophy.md  usage.md
docs/hardware-reference/: hardware-capabilities.md
docs/home/: advanced_usage.md  background.md  bloqade_101.md  emulation.md  geometry.md  getting_started.md  gotchas.md  index.md  philosophy.md  quick_start.md  submission.md  visualization.md  waveforms.md
docs/reference/: hardware-capabilities.md  overview.md  standard.md
docs/scripts/: gen_ref_nav.py
docs/stylesheets/: extra.css
docs/tree/: builder.md
docs/tutorials/: index.md
examples/: adiabatic.py  mis.py  mwe_adiabatic.py
exmaples/: adiabatic.py  mwe_adiabatic.py
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/blog/: index.html
latest/contributing/: index.html
latest/getting_started/: index.html
main/: 404.html  index.html  objects.inv  sitemap.xml
plugins/bloqade-python-mis/: README.md  pyproject.toml
plugins/bloqade-python-mis/src/bloqade/: __init__.py
plugins/bloqade-python-mis/src/bloqade/mis/: types.py
tests/: _test_batch.py  _test_compiler_passes.py  _test_issue.py  _test_mock_submit.py  _test_schema.py  scalar.py  test_2d_state_compile.py  test_adiabatic_compile.py  test_args.py  test_assign.py  test_assign_to_literal.py  test_batch.py  test_batch2.py  test_braket_emulator.py  test_braket_ir.py  test_braket_submission_backend.py  test_braket_submit.py  test_bravais.py  test_builder.py  test_builder_factory.py  test_builder_job.py  test_builder_old.py  test_builder_visual.py  test_canonicalize.py  test_codegen_quera.py  test_compiler_passes.py  test_constants.py  test_costum_submission.py  test_emu_interface.py  test_emulator_codegen.py  test_emulator_interface.py  test_examples.py  test_expectation_value.py  test_factory.py  test_field.py  test_flatten.py  test_flatten_sequence.py  test_floquet_compile.py  test_hamiltonian_codegen.py  test_hardware_codegen.py  (+49 more)
v0.15.11/: 404.html
whitepaper/: example-1a-rabi.py  example-1b-ramsey.py  example-1c-floquet-protocol.py  example-1c-floquet.py  example-2-lp-gate.py  example-2-multi-qubit-blockaded.py  example-2-nonequilibrium-dynamics-blockade-radius.py  example-2-two-qubit-adiabatic.py  example-3-2d-ordered-state.py  example-3-fixed-1d-z2.py  example-3-n-atom-sweep.py  example-3-time-sweep.py  example-4-quantum-scar-dynamics.py  example-5-MIS-UDG.py  example_1a_rabi.py  example_1b_IR_ramsey.py  example_1b_builder_ramsey.py  example_2_multi_qubit_blockaded.py  example_2_two_qubit_adiabatic.py  piecewise_linear_constructor.py
(+12856 files in other folders)
