[project]
name = "bloqade"
version = "0.3.6"
description = "Neutral atom software development kit"
authors = [
    {name = "QuEra Computing Inc.", email = "info@quera.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
dependencies = [
    "juliacall>=0.9.14",
    "numpy>=1.25.2",
    "pydantic>=1.10.12",
    "scipy>=1.9.3",
    "pandas>=2.1.0",
    "bokeh>=3.2.2",
    "tabulate>=0.9.0",
    "requests-sigv4>=0.1.6",
    "amazon-braket-sdk>=1.55.0",
    "plotext>=5.2.8",
    "beartype>=0.15.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
[project.optional-dependencies]
doc = [
    "mkdocs>=1.4.3",
    "mkdocs-material>=9.1.9",
    "mkdocstrings[python]>=0.21.2",
    "mkdocs-minify-plugin>=0.6.4",
    "mkdocs-jupyter>=0.24.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "mike>=1.1.2",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
line-length = 88

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# Assume Python 3.9.
target-version = "py39"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "twine>=4.0.2",
    "ipython>=8.12.0",
    "black>=23.3.0",
    "pytest>=7.3.1",
    "mypy>=1.2.0",
    "ipykernel>=6.22.0",
    "jupyter>=1.0.0",
    "ruff>=0.0.264",
    "pre-commit>=3.3.1",
    "coverage>=7.2.5",
    "jupytext>=1.14.5",
    "pytest-recording>=0.12.2",
    "vcrpy==4.4.0",
]

[tool.pdm.scripts]
_.env_file = "./.env"
upload = "python -m twine upload -r bloqade dist/*"
build = {cmd = "pdm build"}
publish = {composite = ["build", "upload"]}
test = {shell = "git clean -f && pytest tests"}
coverage = {shell = "git clean -f && coverage run -m pytest tests/ && coverage xml && coverage report"}
coverage-html = {shell = "git clean -f && coverage run -m pytest tests/ && coverage html && open htmlcov/index.html"}
doc = {cmd = "mkdocs serve -f docs/mkdocs.yml"}
doc_build = {cmd = "mkdocs build -f docs/mkdocs.yml"}
doc_deploy = {cmd = "pdm mike deploy --push --update-aliases dev -F docs/mkdocs.yml"}

[tool.jupytext]
formats = "ipynb,py:percent"
hide_notebook_metadata = false
